# 3D-Polylla

./: .gitignore  3D-samplegeneration.ipynb  PolyllaEdge.py  PolyllaFace.py  README.md  face_log.txt  face_orig10.off  face_prueba500.off  generatePolylla.ipynb  logEdgeOrg  logEdgePrueba  logEdgerueba  logFace.txt  logFaceOrg  logTetra.txt  main.py  mesh.py  newMesh.py  polylla-time.ipynb  polylla_script.py  pruebaTetra.py  readFile.cpp  rresdg  rresdg2  rresdg3  socket.1POLYLLAEDGE_polyhedron_0.off  socket.1POLYLLAEDGE_polyhedron_1.off  socket.1POLYLLAEDGE_polyhedron_10.off  socket.1POLYLLAEDGE_polyhedron_100.off  socket.1POLYLLAEDGE_polyhedron_1000.off  socket.1POLYLLAEDGE_polyhedron_1001.off  socket.1POLYLLAEDGE_polyhedron_1002.off  socket.1POLYLLAEDGE_polyhedron_1003.off  socket.1POLYLLAEDGE_polyhedron_1004.off  socket.1POLYLLAEDGE_polyhedron_1005.off  socket.1POLYLLAEDGE_polyhedron_1006.off  socket.1POLYLLAEDGE_polyhedron_1007.off  socket.1POLYLLAEDGE_polyhedron_1008.off  socket.1POLYLLAEDGE_polyhedron_1009.off  socket.1POLYLLAEDGE_polyhedron_101.off  (+1251 more)
Experiments/: CMakeLists.txt  Voronoi.ipynb  experiments.cpp  experiments_analysis.ipynb  faceExperiments.ipynb  kernel  voronoi.py
data/: 3D_100.1_PolyllaFACE_polyhedron_10.off  3D_100.1_PolyllaFACE_polyhedron_13.off  3D_100.1_PolyllaFACE_polyhedron_14.off  3D_100.1_PolyllaFACE_polyhedron_2.off  3D_100.1_PolyllaFACE_polyhedron_20.off  3D_100.1_PolyllaFACE_polyhedron_22.off  3D_100.1_PolyllaFACE_polyhedron_25.off  (+989 more)
polyhedron_kernel-main/polyhedron_kernel_version1/: CMakeLists.txt  polyhedron_kernel.h
(+2114 files in other folders)
